--- a/styles.css
+++ b/styles.css
@@ -3,6 +3,10 @@ h1 {
     font-size: 44px;
     font-weight: 900;
     color: blueviolet;
+    background-color: rgb(255, 240, 253);
+    text-align: center;
+    margin-top: 15px;
+
 }
 
 a{
@@ -12,3 +16,21 @@ a{
     font-style: italic;
 }
 
+.first{
+    background-color: honeydew;
+    padding: 10px;
+    margin: 25px;
+}
+
+.second{
+    background-color: aquamarine;
+    padding: 10px;
+    margin: 50px;
+
+}
+
+.third{
+    background-color: aqua;
+    margin: 150px;
+    padding: 10px;
+}
